random-item-purchase-system/k8s/kafka-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: redpanda
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  type: NodePort
