random-item-purchase-system/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-purchase-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: purchase.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 4000
          - path: /api-server
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 3000
